# AutoTest

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.sisyphus/: cycle_state.json
.sisyphus/audit/: 2026-05-15-deep-audit-round3.md  2026-05-15-p1-p5-review.md  2026-05-15-requirements-traceability.md
.sisyphus/plans/: 2026-05-15-autotest-implementation-roadmap.md
.sisyphus/todo/: 2026-05-15-pending-tasks.md
app/: config.py  db_init.py  dependencies.py  main.py
app/domain/: events.py  exceptions.py
app/engine/: chain_builder.py  execution_engine.py  task_orchestrator.py
app/interfaces/: ai_service.py  executor_client.py  file_service.py  ocr_service.py  task_queue.py
app/lib/: event_bus.py  feature_flags.py  id_generator.py  logger.py  retry.py
app/services/: analysis_service.py  causal_engine.py  code_analysis_service.py  contrast_service.py  (+8 more)
docs/: API接口规范.md  ARCHITECTURE.md  REQUIREMENTS.md  全自动AI测试产品强化建议.md  全自动AI测试文档总览.md  全自动AI测试闭环设计.md  基于Midscene.js 全自动无人介入AI UI测试框架.md  开发规范与指南.md  数据库设计.md  测试计划.md  自动测试任务模型设计.md  自动缺陷归因与AI交付设计.md  详细设计说明书.md  软件架构设计文档_ADD.md  部署方案.md
migrations/: alembic.ini  env.py
scripts/: auto_loop.sh  autotest-cli.py  demo.py  destructive_test.py  e2e_demo.py  edge_test.py  full_test.py  human_monitor.sh  human_sim.py  monitor.sh  real_self_test.py  self_test.py  self_test.sh  true_self_test.py
tests/: conftest.py  factories.py  mock_repos.py
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+121 files in other folders)
