[project]
name = "autotest"
version = "0.1.0"
description = "AI-driven automated UI testing framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "litellm>=1.40.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "click>=8.1.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
autotest = "scripts.autotest_cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "factory-boy>=3.3.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services",
    "executor: tests requiring running executor service at http://localhost:3100",
]
